# osbiglab-2025s-2022011223

./: .gitmodules  README.md
kani-exercises/bubble_sort/src/: main.rs
minOS/: Cargo.toml  Makefile  README-2.md  README.md  test_minOS.sh
minOS/api/arceos_api/: Cargo.toml
minOS/api/arceos_api/src/: lib.rs  macros.rs
minOS/api/arceos_api/src/imp/: mem.rs  mod.rs  task.rs
minOS/api/arceos_posix_api/: Cargo.toml  build.rs  ctypes.h
minOS/api/arceos_posix_api/src/: lib.rs
minOS/api/arceos_posix_api/src/imp/: mod.rs  task.rs  time.rs
minOS/api/arceos_posix_api/src/imp/io_mpx/: epoll.rs  select.rs
minOS/api/axfeat/: Cargo.toml
minOS/app/hello_world/: Cargo.toml
minOS/app/hello_world/src/: main.rs
minOS/modules/axhal/: Cargo.toml
minOS/modules/axhal/src/: cpu.rs  lib.rs  time.rs
minOS/modules/axhal/src/arch/aarch64/: context.rs
minOS/modules/axhal/src/arch/riscv/: context.rs
minOS/modules/axhal/src/arch/x86_64/: context.rs
minOS/modules/axhal/src/platform/aarch64_common/: boot.rs  mod.rs
minOS/modules/axhal/src/platform/aarch64_raspi/: mod.rs
minOS/modules/axhal/src/platform/dummy/: mod.rs
minOS/modules/axhal/src/platform/riscv64_qemu_virt/: boot.rs
minOS/modules/axhal/src/platform/x86_pc/: boot.rs
minOS/modules/axruntime/: Cargo.toml
minOS/modules/axruntime/src/: lib.rs  mp.rs
minOS/modules/bump_allocator/src/: lib.rs
minOS/ulib/axstd/: Cargo.toml
minOS/ulib/axstd/src/: lib.rs  macros.rs
minOS/ulib/axstd/src/sync/: mod.rs
minOS/ulib/axstd/src/thread/: mod.rs
reports/: 2025-03-20.md  2025-03-27.md  2025-04-03.md  2025-04-10(mid-term).md  2025-04-17.md  2025-04-24.md  2025-05-07.md  2025-05-08.md  2025-05-14.md  2025-05-15.md  2025-05-22.md  2025-05-29.md  2025-06-05(final).md
