[package]
name = "axfeat"
version.workspace = true
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/axfeat"
documentation = "https://arceos-org.github.io/arceos/axfeat/index.html"

[features]
default = []

# Multicore
smp = ["kspin/smp"]

# Interrupts
irq = ["axhal/irq", "axruntime/irq"]

# Memory
alloc = ["axalloc", "axruntime/alloc"]
alloc-tlsf = ["axalloc/tlsf"]
alloc-slab = ["axalloc/slab"]
alloc-buddy = ["axalloc/buddy"]
paging = ["alloc", "axhal/paging", "axruntime/paging"]

alt_alloc = ["alt_axalloc", "axruntime/alt_alloc"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]

[dependencies]
axruntime = { workspace = true }
axhal = { workspace = true }
axlog = { workspace = true }
axalloc = { workspace = true, optional = true }
alt_axalloc = { workspace = true, optional = true }
kspin = { version = "0.1", optional = true }
