[package]
name = "axstd"
version.workspace = true
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user library with an interface similar to rust std"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/ulib/axstd"
documentation = "https://arceos-org.github.io/arceos/axstd/index.html"

[features]
default = []

# Multicore
smp = ["axfeat/smp", "kspin/smp"]

# Interrupts
irq = ["arceos_api/irq", "axfeat/irq"]

# Memory
alloc = ["arceos_api/alloc", "axfeat/alloc", "axio/alloc"]
alloc-tlsf = ["axfeat/alloc-tlsf"]
alloc-slab = ["axfeat/alloc-slab"]
alloc-buddy = ["axfeat/alloc-buddy"]

alt_alloc = ["arceos_api/alt_alloc", "axfeat/alt_alloc"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

[dependencies]
axfeat = { workspace = true }
arceos_api = { workspace = true }
axio = "0.1"
axerrno = "0.1"
kspin = "0.1"
